--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.3.0"
+    "react-scripts": "3.3.0",
+    "write-file-p": "^1.0.7",
+    "write-json-file": "^4.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
